--- a/pages/getStartedPage.html
+++ b/pages/getStartedPage.html
@@ -22,6 +22,7 @@
 
     <!-- my-css file connection -->
     <link rel="stylesheet" href="getStartedPage.css">
+    <link rel="stylesheet" href="accountDropdown.css">
 
 </head>
 
@@ -44,11 +45,11 @@
                     </div>
 
                     <div class="nav-menu">
-                        <a class="btn btn-block selected-nav"><strong>Resume</strong></a>
-                        <a class="btn btn-block">Cover Letter</a>
-                        <a class="btn btn-block">Job Tracker</a>
+                        <a href="/get-started" class="btn btn-block selected-nav"><strong>Resume</strong></a>
+                        <a href="/cover-letter" class="btn btn-block">Cover Letter</a>
+                        <a href="/job-tracker" class="btn btn-block">Job Tracker</a>
                         <div class="divider"></div>
-                        <a class="btn btn-block">More</a>
+                        <a href="/more" class="btn btn-block">More</a>
                     </div>
 
                     <div id="bottomButtonDiv">
@@ -265,7 +266,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-    <script src="/getStartedPageJS.js"></script>
+    <script src="getStartedPageJS.js"></script>
 </body>
 
 </html>
