--- a/pages/settings.html
+++ b/pages/settings.html
@@ -107,7 +107,7 @@
                         <div class="login-section">
                             <h3>Google Account</h3>
                             <div class="google-account">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
+                                <img src="/google.png"
                                     alt="Google" class="google-icon">
                                 <span class="email-text">tanvirhossain0864@gmail.com</span>
                             </div>
