--- a/pages/benefits.html
+++ b/pages/benefits.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="FlowCV Student Benefits">
+    <meta name="description" content="NastCV Student Benefits">
     <meta name="author" content="group-project">
 
     <!-- Bootstrap connection -->
@@ -33,8 +33,8 @@
                 <div id="leftDiv">
                     <div class="logo-container">
                         <a id="logo" href="/home">
-                            <img src="/logo.jpg" alt="flowcv logo">
-                            <span class="logo-text">flow<strong style="color: #ed0482;">cv</strong></span>
+                            <img src="/logo.jpg" alt="nastcv logo">
+                            <span class="logo-text">Nast<strong style="color: #ed0482;">cv</strong></span>
                         </a>
                     </div>
 
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="benefits-card">
-                        <h2>Join the FlowCV Student Program</h2>
+                        <h2>Join the NastCV Student Program</h2>
                         <p class="benefits-description">Enter your university email and we will send you a verification
                             link.</p>
 
